国際化着手

--- a/src/application_en.properties
+++ b/src/application_en.properties
@@ -11,3 +11,17 @@ validator.minlength={0} can not be less than {1} characters.
 validator.maxlength={0} can not be greater than {1} characters.
 validator.range={0} is not in the {1} to {2} range.
 validator.regexp={0} is invalid.
+
+msg.niwaruka=Niwaruka
+msg.home=Home
+msg.mypage=My Page
+msg.tagmanager=Tag Manager
+msg.tagmailer=Mailer
+msg.logout=logout
+msg.notifications=PULL !
+msg.how.niwaruka=How <b>Niwaruka</b> are you?
+msg.loading=loading...
+msg.do.niwaruka=Niwaruka
+msg.what.doing=What are you doing ?
+msg.read.more=Read more...
+msg.developpers="Niwaruka" is developped by Izumi-lab. members in Sojo University, Japan.
