--- a/src/application_ja.properties
+++ b/src/application_ja.properties
@@ -17,3 +17,17 @@ label.email=\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
 label.userName=\u304a\u540d\u524d
 label.passwd1=\u30d1\u30b9\u30ef\u30fc\u30c9
 label.passwd2=\u30d1\u30b9\u30ef\u30fc\u30c9(\u78ba\u8a8d)
+
+msg.niwaruka=\u306b\u308f\u308b\u304b
+msg.home=\u307b\u30fc\u3080
+msg.mypage=\u307e\u3044\u307a\u30fc\u3058
+msg.tagmanager=\u305f\u3050\u307e\u306d\u30fc\u3058\u3083\u30fc
+msg.tagmailer=\u305f\u3050\u3081\u30fc\u3089\u30fc
+msg.logout=\u308d\u3050\u3042\u3046\u3068
+msg.notifications=\u304a\u3057\u3089\u305b
+msg.how.niwaruka=\u4eca\u4f55\u3057\u3066<b>\u306b\u308f\u308b\u304b</b>\uff1f
+msg.loading=loading...
+msg.do.niwaruka=\u306b\u308f\u308b\u304b\u308b
+msg.what.doing=\u3044\u307e\u4f55\u3057\u3066\u308b\uff1f
+msg.read.more=\u3082\u3063\u3068\u8aad\u3080
+msg.developpers=\u300c\u306b\u308f\u308b\u304b\u300d\u306f\u5d07\u57ce\u5927\u5b66\u548c\u6cc9\u7814\u7a76\u5ba4\u3067\u958b\u767a\u3055\u308c\u3066\u3044\u307e\u3059\u3002
